--- a/app/src/main/res/layout/my_locations.xml
+++ b/app/src/main/res/layout/my_locations.xml
@@ -4,23 +4,26 @@
     android:id="@+id/parent"
     android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:focusableInTouchMode="true"
-        android:focusable="true">
+        android:focusable="true"
+        >
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp">
+            android:layout_marginRight="8dp"
+            >
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/add_location"
                 android:layout_gravity="end|center_vertical"
                 android:layout_width="50dp"
@@ -29,14 +32,16 @@
                 card_view:cardUseCompatPadding="true"
                 card_view:cardBackgroundColor="@color/app_red"
                 card_view:cardCornerRadius="3dp"
-                card_view:cardElevation="2dp">
+                card_view:cardElevation="2dp"
+                >
 
                 <ImageView
                     android:id="@+id/plus_icon"
                     android:contentDescription="@string/add_location"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-            </android.support.v7.widget.CardView>
+                    android:layout_height="match_parent"
+                    />
+            </androidx.cardview.widget.CardView>
 
             <EditText
                 android:id="@+id/location_input"
@@ -50,7 +55,8 @@
                 android:singleLine="true"
                 android:imeOptions="actionDone"
                 android:layout_width="match_parent"
-                android:layout_height="44dp"/>
+                android:layout_height="44dp"
+                />
         </FrameLayout>
 
         <TextView
@@ -63,12 +69,14 @@
             android:textColor="@color/dark_gray"
             android:text="@string/no_locations"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            />
 
         <ListView
             android:id="@+id/locations"
             android:layout_marginTop="4dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            />
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
