--- a/app/src/main/res/layout/restaurant_info.xml
+++ b/app/src/main/res/layout/restaurant_info.xml
@@ -6,32 +6,37 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/default_margin"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <ImageView
             android:id="@+id/restaurant_picture"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:orientation="vertical"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            >
 
             <TextView
                 android:id="@+id/restaurant_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
-                android:textColor="@color/dark_gray"/>
+                android:textColor="@color/dark_gray"
+                />
 
             <com.joanzapata.iconify.widget.IconTextView
                 android:id="@+id/current_deal"
@@ -46,7 +51,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textColor="@color/gray_600"/>
+                android:textColor="@color/gray_600"
+                />
         </LinearLayout>
     </LinearLayout>
 
@@ -54,27 +60,33 @@
         android:layout_marginTop="@dimen/default_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <ImageView
             android:id="@+id/first_star"
-            style="@style/rating_star"/>
+            style="@style/rating_star"
+            />
 
         <ImageView
             android:id="@+id/second_star"
-            style="@style/rating_star"/>
+            style="@style/rating_star"
+            />
 
         <ImageView
             android:id="@+id/third_star"
-            style="@style/rating_star"/>
+            style="@style/rating_star"
+            />
 
         <ImageView
             android:id="@+id/fourth_star"
-            style="@style/rating_star"/>
+            style="@style/rating_star"
+            />
 
         <ImageView
             android:id="@+id/fifth_star"
-            style="@style/rating_star"/>
+            style="@style/rating_star"
+            />
     </LinearLayout>
 
     <TextView
@@ -83,22 +95,26 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:textColor="@color/dark_gray"
-        android:layout_gravity="center_vertical"/>
+        android:layout_gravity="center_vertical"
+        />
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <com.joanzapata.iconify.widget.IconTextView
             android:id="@+id/address_icon"
             android:text="@string/map_icon"
-            style="@style/restaurant_icon"/>
+            style="@style/restaurant_icon"
+            />
 
         <TextView
             android:id="@+id/address"
-            style="@style/restaurant_info_text"/>
+            style="@style/restaurant_info_text"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -106,19 +122,22 @@
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <com.joanzapata.iconify.widget.IconTextView
             android:id="@+id/phone_icon"
             android:text="@string/phone_icon"
-            style="@style/restaurant_icon"/>
+            style="@style/restaurant_icon"
+            />
 
         <TextView
             android:id="@+id/phone_number"
-            style="@style/restaurant_info_text"/>
+            style="@style/restaurant_info_text"
+            />
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/view_on_yelp"
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
@@ -128,13 +147,15 @@
         card_view:cardUseCompatPadding="true"
         card_view:cardBackgroundColor="@color/super_light_gray"
         card_view:cardCornerRadius="3dp"
-        card_view:cardElevation="2dp">
+        card_view:cardElevation="2dp"
+        >
 
         <com.joanzapata.iconify.widget.IconTextView
             android:text="@string/view_on_yelp"
             android:textColor="@color/dark_gray"
             android:textSize="20sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </android.support.v7.widget.CardView>
+            android:layout_height="wrap_content"
+            />
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
